--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="topbar__right">
         <i class="fa-solid fa-magnifying-glass"></i>
-        <i class="fa-solid fa-cart-shopping"></i>
+        <i class="fa-solid fa-cart-shopping"><p class="topbar__right__cart__notice"><strong>9+</strong></p></i>
         <a href="#">LOGIN</a>
         <a href="#">SIGN UP</a>
       </div>
@@ -46,13 +46,16 @@
             <div><small>Used for business</small></div>
           </div>
           <div class="main__left__card__detail">
-            <h4>Google Docs</h4>
-            <div class="main__left__card__detail__levelDisplay"></div>
-            <select>
+            <h3>Google Docs</h3>
+            <div class="main__left__card__detail__levelDisplay">
+            <div class="leveldisplayTop1"></div>
+            <div class="leveldisplayTop2"></div>
+            <div class="leveldisplayTop3"></div>
+              <select>
               <option value="">LV 1-3</option>
               <option value="">LV 2-3</option>
               <option value="">LV 3-3</option>
-            </select>
+            </select></div>
             <div class="card_price">THB 150</div>
           </div>
         </div>
@@ -66,13 +69,18 @@
             <div><small>Used for business</small></div>
           </div>
           <div class="main__left__card__detail">
-            <h4>Google Slides</h4>
-            <div class="main__left__card__detail__levelDisplay"></div>
-            <select>
-              <option value="">LV 1-3</option>
-              <option value="">LV 2-3</option>
-              <option value="">LV 3-3</option>
-            </select>
+            <h3>Google Slides</h3>
+            <div class="main__left__card__detail__levelDisplay">
+            <div class="leveldisplayBottom1"></div>
+            <div class="leveldisplayBottom2"></div>
+            <div class="leveldisplayBottom3"></div>
+            <div class="leveldisplayBottom4"></div>
+              <select>  
+              <option value="">LV 1/4</option>
+              <option value="">LV 2/4</option>
+              <option value="">LV 3/4</option>
+              <option value="">LV 4/4</option>
+            </select></div>
             <div class="card_price">THB 150</div>
           </div>
         </div>
